# zilch

./: .gitignore  README.md  Zilch.hs  zilch.cabal
.github/workflows/: release.yml
app/: Main.hs  Zilch.hs
