cabal-version:      2.4
name:               zilch
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sebastian Proell
maintainer:         sebastian.proell@tum.de


executable zilch
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Zilch

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, containers
    hs-source-dirs:   app
    default-language: Haskell2010
